--- a/day_7_landing_page/style.css
+++ b/day_7_landing_page/style.css
@@ -148,7 +148,7 @@ h1 {
   
   @media (max-width: 800px) {
     h1 {
-      font-size: 2rem;
+      font-size: 1rem;
       top: 30%;
     }
   
@@ -156,4 +156,20 @@ h1 {
       padding: 1.2rem;
       width: 12rem;
     }
+    .split.right::before {
+        content:'';
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        background-color: var(--right-bg-color);
+    
+    }
+    .split.left::before {
+        content:'';
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        background-color: var(--left-bg-color);
+     
   }
+}
