--- a/day_7_landing_page/style.css
+++ b/day_7_landing_page/style.css
@@ -176,7 +176,7 @@ h1 {
     right: 0;
     background: url('mimosa.jpeg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 50%vw;
     
 }
 
@@ -184,7 +184,7 @@ h1 {
     left: 0;
     background: url('betoven2.jpeg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 50%vw;
     
 }
 
