--- a/day_7_landing_page/style.css
+++ b/day_7_landing_page/style.css
@@ -159,16 +159,16 @@ h1 {
     .split.right::before {
         content:'';
         position: absolute;
-        width: 50%;
-        height: 100%;
+        width: 50vw;
+        height: 100vh;
         background-color: var(--right-bg-color);
     
     }
     .split.left::before {
         content:'';
         position: absolute;
-        width: 50%;
-        height: 100%;
+        width: 50vw;
+        height: 100vh;
         background-color: var(--left-bg-color);
      
   }
@@ -176,7 +176,9 @@ h1 {
     right: 0;
     background: url('mimosa.jpeg');
     background-repeat: no-repeat;
-    background-size: 50%vw;
+    background-size: cover;
+    width: 50vw;
+    height: 100vh;
     
 }
 
@@ -184,7 +186,9 @@ h1 {
     left: 0;
     background: url('betoven2.jpeg');
     background-repeat: no-repeat;
-    background-size: 50%vw;
+    background-size: cover;
+    width: 50vw;
+    height: 100vh;
     
 }
 
