--- a/day_7_landing_page/style.css
+++ b/day_7_landing_page/style.css
@@ -1,4 +1,5 @@
-@import url();
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 
 :root {
     --left-bg-color: rgba(105, 102, 244, 0.2);
